Migrate JAXB to jakarta
- change javax.* JAXB packages to jakarta.*
- bump snapshot version to 1.15.0-SNAPSHOT

Issue-ID: AAI-4005
Change-Id: I304328d2b8d2b943919f741f63b8842ac2ee126b
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>